--- a/Auction/WebContent/management/auctionInfor.html
+++ b/Auction/WebContent/management/auctionInfor.html
@@ -71,7 +71,7 @@
 				<!-- Ending navbar -->
 
 				<!-- Starting page-wrapper -->
-				<div id="page-wrapper" style="height: 93vh; width: 99%">
+				<div id="page-wrapper" class="block"> <!--style="height: 93vh; width: 99%"  -->
 					<div class="panel-group">
 
 						<div class="panel-body">
